--- a/index.html
+++ b/index.html
@@ -15,35 +15,36 @@
     <div class="top_bar">
         <div class="inner">
             <div class="slogan">
-                Lorem ipsum dolor sit amet.
+                melon
             </div>
             <ul class="customer">
-                <li>Q&A</li>
-                <li>NOTICE</li>
-                <li><i class="xi-pause"></i></li>
+                <li>로그인</li>
+                <li>이용권</li>
+                <li>이벤트</li>
+                <li>공지사항</li>
             </ul>
         </div>
     </div>
     <header class="header">
         <div class="inner">
-            <h1> abc
-                <img src="" alt="">
+            <h1>
+                <img src="./images/logo_melon142x99.png" alt="">
             </h1>
             <nav class="gnb">
                 <ul>
-                    <li><a href="">menu01</a></li>
-                    <li><a href="">menu02</a></li>
-                    <li><a href="">menu03</a></li>
-                    <li><a href="">menu04</a></li>
+                    <li><i class="xi-chart-bar"></i><a href="">멜론차트</a></li>
+                    <li><i class="xi-album"></i><a href="">최신음악</a></li>
+                    <li><i class="xi-library-music"></i><a href="">장르음악</a></li>
+                    <li><i class="xi-headset"></i><a href="">멜론DJ</a></li>
+                    <li><i class="xi-music"></i><a href="">마이뮤직</a></li>
                 </ul>
             </nav>
-            <div class="right">010-1111-1111</div>
         </div>
     </header>
     <div class="main_full">
         <div class="section">
             <figure>
-                <img src="" alt="">
+                <img src="./images/album 01.jpg" alt="">
             </figure>
         </div>
     </div>
