--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="top_bar">
         <div class="inner">
             <div class="slogan">
-                melon
+                Melon::음악이 필요한 순간, 멜론
             </div>
             <ul class="customer">
                 <li>로그인</li>
@@ -38,11 +38,11 @@
             </h1>
             <nav class="gnb">
                 <ul>
-                    <li><i class="xi-chart-bar"></i><a href="">멜론차트</a></li>
-                    <li><i class="xi-album"></i><a href="">최신음악</a></li>
-                    <li><i class="xi-library-music"></i><a href="">장르음악</a></li>
-                    <li><i class="xi-headset"></i><a href="">멜론DJ</a></li>
-                    <li><i class="xi-music"></i><a href="">마이뮤직</a></li>
+                    <li><i class="xi-chart-bar"></i><a href=""> 멜론차트</a></li>
+                    <li><i class="xi-album"></i><a href=""> 최신음악</a></li>
+                    <li><i class="xi-library-music"></i><a href=""> 장르음악</a></li>
+                    <li><i class="xi-headset"></i><a href=""> 멜론DJ</a></li>
+                    <li><i class="xi-music"></i><a href="" > 마이뮤직</a></li>
                 </ul>
             </nav>
         </div>
@@ -59,22 +59,42 @@
 
     <!-- 사진 3개 있는 거 -->
     <section id="event">
-        <h2>멜론 차트</h2>
-        <p>국내 / 해외</p>
+        <div class="top">
+        <h2>멜론 실시간 차트</h2>
+        <ul>
+            <li>국내</li>
+            <li>해외</li>
+        </ul>
+        </div>
         <div class="inner clearfix">
             <figure>
-                <div>
+                <div class="albumImg">
                     <img src="./images/melonchart01.jpg" alt="">
                 </div>
                 <div class="text">
-                    <strong>dd</strong>
+                    <strong>I AM</strong>
+                    <p class="artist">IVE (아이브)</p>
                 </div>
             </figure>
+
             <figure>
-                <img src="./images/melonchart02.jpg" alt="">
+                <div class="albumImg">
+                    <img src="./images/melonchart02.jpg" alt="">
+                </div>
+                <div class="text">
+                    <strong> UNFORGIVEN (feat. Nile Rodgers)</strong>
+                    <p class="artist">LE SSERAFIM (르세라핌)</p>
+                </div>
             </figure>
+            
             <figure>
-                <img src="./images/melonchart03.jpg" alt="">
+                <div class="albumImg">
+                    <img src="./images/melonchart03.jpg" alt="">
+                </div>
+                <div class="text">
+                    <strong>Spicy</strong>
+                    <p class="artist">aespa</p>
+                </div>
             </figure>
         </div>
     </section>
